--- a/src/shared/infra/providers/mail/views/recoveryPassword.hbs
+++ b/src/shared/infra/providers/mail/views/recoveryPassword.hbs
@@ -39,7 +39,7 @@
     <strong>Recebemos uma solicitação em {{date}} para alteração da sua senha!</strong>
     <p>Se for você clique no link abaixo</p>
     <br/>
-    {{recoveryLink+'/'+id}}
+    <a href="{{recoveryLink}}/{{id}}">Clique aqui</a>
     <p>Caso não tenha sido aconselhamos que faça login e altere sua senha</p>
 
     <br/>
