adiconando surname no usuario

--- a/src/shared/infra/providers/mail/views/recoveryPassword.hbs
+++ b/src/shared/infra/providers/mail/views/recoveryPassword.hbs
@@ -8,38 +8,16 @@
         flex-direction: column;
     }
 
-    .value {
-        padding: 10px;
-        background-color: #8257e6;
-        color: #fff;
-        border-radius: 6px;
-        width: 15px;
-        text-align: center;
-        text-decoration: none;
-    }
-
-    .level {
-        display: flex;
-        margin: 10px;
-        justify-content: space-between;
-        width: 350px;
-    }
-
-    .awnsers {
-        width: 350px;
-        display: flex;
-        justify-content: space-between;
-    }
 </style>
 
 <div class="container">
-    <h3>Olá <strong>{{name}}</strong>! Tudo bem?</h3>
+    <h3>Olá <strong>{{name}} {{surname}}</strong>! Tudo bem?</h3>
 
     <br />
     <strong>Recebemos uma solicitação em {{date}} para alteração da sua senha!</strong>
     <p>Se for você clique no link abaixo</p>
     <br/>
-    <a href="{{recoveryLink}}/{{id}}">Clique aqui</a>
+    <a href="http://{{recoveryLink}}/{{id}}">Clique aqui</a>
     <p>Caso não tenha sido aconselhamos que faça login e altere sua senha</p>
 
     <br/>
